Bug 64741 - FILEOPEN: Thunderbird-addressbook doesn't show collected addresses, shows only empty table "AddressBook" (personal addressbook of TB)
Summary: FILEOPEN: Thunderbird-addressbook doesn't show collected addresses, shows onl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0
Keywords: regression
Depends on:
Blocks: Database-Wizard
  Show dependency treegraph
 
Reported: 2013-05-18 15:43 UTC by Robert Großkopf
Modified: 2017-12-06 20:37 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-05-18 15:43:21 UTC
Using the same *.odb-file for connecting to the Thunderbird adressbook. Works up to LO 3.6.6.2. It shows "Collected Adresses", "Personal Adressbook" and some views for groups I have created. When I start this *.odb-file in LO 4.0.3.3 it shows only one "AdressBook" - without content.
Steps to reproduce:
1) Open LO
2) Open Database Wizard
3) Connect to an existing database
4) Chose Thunderbird/Icedove Address Book
5) You must not register - open the database for editing
6) You are called for a name for this connection - chose the default.
7) Mouseclick on the tables
...
Comment 1 Jochen 2013-05-27 12:24:27 UTC
Hi Robert,

I don´t understand the steps for reproducing.
What do you mean with "Using the same *.odb-file"?
What do you mean with "Connect to an existing database"?
Have you an example odb-file?

Regards

Jochen
Comment 2 Robert Großkopf 2013-05-27 14:39:01 UTC
Hi Jochen,
> 
> I don´t understand the steps for reproducing.
> What do you mean with "Using the same *.odb-file"?

I have used the same *.odb-file as in LO 3.*-versions. In Lo 3.* it works, in LO 4.0.3.3 it doesn't work - no tables of the Adress-Book.

> What do you mean with "Connect to an existing database"?

It's the 3. radiobutton on the first step of the database-wizard. In the german version it is called "Verbindung zu einer bestehenden Datenbank herstellen".

> Have you an example odb-file?

I don't know if it would work on other systems. The path to the thunderbird-adressbook would differ. So it is better to start the wizard - there are only a few mouseclicks, no table to create ...

Regards

Robert
Comment 3 Robert Großkopf 2013-05-27 14:51:17 UTC
When I open the database-wizard in LO 4.1.0.0 Beta1, there isn't any entry for the Thunderbird-Adressbook any more. Could be the connection isn't supported any more ...
The result is the same. When I open a database for the thunderbird-adressbook, created in LO 3.*, it is shown with one empty table.
Comment 4 Jochen 2013-05-28 22:55:09 UTC
Works fine/correct with Windows 7 prof 64 bit and LO 4.0.3
Comment 5 Julien Nabet 2013-06-14 16:25:55 UTC
On pc Debian x86-64,
1) with Debian package 4.0.3, I can see Thunderbird/Icedove option in Wizards but just Addressbook (with the contents). I don't see other ones.

2) with master sources updated today, I don't see Thunderbird/Icedove option
Comment 6 Julien Nabet 2013-06-14 16:51:00 UTC
Robert: I create a new bug for "Thunderbird/Icedove" doesn't appear at all. I put it in see also. Would you have some time to add your confirmation? (+ replace version to 4.1 beta?)
Comment 7 Robert Großkopf 2013-07-13 07:25:37 UTC
I have tested a little bit more. There are 2 addressbooks in thunderbird. Thunderbird saves the mail-contacts in a addressbook. Maybe called in English "Collected Addresses". And there is another addressbook called "Personal Addressbook". LO Base (since LO 4.0.*) shows only this "Personal Addressbook" as "AddressBook" - and this addressbook had no content in my thunderbird installation.
Could be base could only connect to one addressbook. But would be good you could chose, which of the addressbooks I will see.
Comment 8 Alex Thurgood 2013-07-13 11:09:49 UTC
All,

The mozab driver was abandoned for all OSes except Windows in the development leading up to 4.0 release. It was replaced on Linux and MacOSX by new code, the mork driver.

From what I remember of the discussions about it on the dev list, the mork driver currently has a limitation where it will only "see" the first table in a Thunderbird address book. This is probably the issue that Robert is seeing.

If, as Julien and Robert mention, the Thunderbird entry is not available in the wizard list of connectable datasources, this is a new bug, I don't remember seeing anywhere that it had been abandoned, so probably something went wrong somewhere in the UI/wizard rework.


Alex
Comment 9 Alex Thurgood 2013-07-13 11:18:17 UTC
I think that the mork driver implementation was done by David Ostrovsky - adding him to CC, but I'm pretty sure that the "collected address" list thing is a current limitation of the driver. If not, its a bug, so either way, he should be able to confirm/deny.


Alex
Comment 10 Alex Thurgood 2013-07-13 11:23:58 UTC
For more info from the dev himself :


http://ostrovsky.org/libreoffice-new-mork-driver/#more-70
Comment 11 DavidO 2013-07-13 13:44:25 UTC
(In reply to comment #9)
> I think that the mork driver implementation was done by David Ostrovsky -
> adding him to CC, but I'm pretty sure that the "collected address" list
> thing is a current limitation of the driver. 

Correct: Collected addresses is not implemented.
Comment 12 DavidO 2013-09-23 19:08:23 UTC
Implemented: https://gerrit.libreoffice.org/6020
Comment 13 Commit Notification 2013-10-04 14:57:38 UTC
David Ostrovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4e25bc4c1f71327002cfbbaae5b85fd05c0ac28

fdo#64741 Thunderbird mork driver: implement collected addresses



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Robert Großkopf 2013-10-16 19:12:30 UTC
(In reply to comment #13)
> David Ostrovsky committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=b4e25bc4c1f71327002cfbbaae5b85fd05c0ac28
> 
> fdo#64741 Thunderbird mork driver: implement collected addresses
> 
Thank you for the patch for LO 4.2.
Collected addresses are now shown with LO 4.2.0.0 alpha. What I am missing: Views of the groups I have created in Thunderbird.

Should I open another bug for this feature?
Comment 15 DavidO 2013-10-17 06:40:47 UTC
(In reply to comment #14)
> (In reply to comment #13)
> > David Ostrovsky committed a patch related to this issue.
> > It has been pushed to "master":
> > 
> > http://cgit.freedesktop.org/libreoffice/core/commit/
> > ?id=b4e25bc4c1f71327002cfbbaae5b85fd05c0ac28
> > 
> > fdo#64741 Thunderbird mork driver: implement collected addresses
> > 
> Thank you for the patch for LO 4.2.
> Collected addresses are now shown with LO 4.2.0.0 alpha. What I am missing:
> Views of the groups I have created in Thunderbird.
> 
Groups are only supported in personal address book and not in collected address.
Comment 16 Robert Großkopf 2013-10-18 19:03:13 UTC
(In reply to comment #15)

> > Collected addresses are now shown with LO 4.2.0.0 alpha. What I am missing:
> > Views of the groups I have created in Thunderbird.
> > 
> Groups are only supported in personal address book and not in collected
> address.

I see this in LO 4.2.0. They only appear (as separate tables), when they are created in the personal addressbook. So it isn't supported yet in LO 4.2.0. But when I open the Thunderbird Addressbook with LO 3.6.* I see the created groups also in the collected addresses. They where shown as views of the collected addresses.

Again the question: Should I open a new Bug for this feature?
Comment 17 DavidO 2013-10-19 12:50:57 UTC
(In reply to comment #16)
> (In reply to comment #15)
> 
> > > Collected addresses are now shown with LO 4.2.0.0 alpha. What I am missing:
> > > Views of the groups I have created in Thunderbird.
> > > 
> > Groups are only supported in personal address book and not in collected
> > address.
> 
> I see this in LO 4.2.0. They only appear (as separate tables), when they are
> created in the personal addressbook. So it isn't supported yet in LO 4.2.0.
> But when I open the Thunderbird Addressbook with LO 3.6.* I see the created
> groups also in the collected addresses. They where shown as views of the
> collected addresses.
> 
> Again the question: Should I open a new Bug for this feature?

Yes, you can see this as regression. Seamonkey had that feature. Our own mork driver not.
Comment 18 retired 2014-12-28 09:29:14 UTC
Back to new. Bug was assigned for over a year. DavidO if you still want to work on this, feel free to re-take this bug.
Comment 19 Robert Großkopf 2014-12-28 10:32:32 UTC
Let us close this bug.
The original bug was about empty "Adress_Book". And this bug has been fixed.

I will reopen a new bug for the details in https://bugs.freedesktop.org/show_bug.cgi?id=64741#c15.