fdo#64741 Thunderbird mork driver: implement collected addresses

Change-Id: I5a8516a6cf4bd71cea2be916d5a7fcfb16b4e749